# dlsite-utils

./: .cookiecutter.json  .flake8  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/dlsite_utils/: __init__.py  __main__.py  archive.py  book.py  config.py  crypto.py  dlst.py  image.py  rename.py  utils.py  video.py
src/dlsite_utils/audio/: tag.py
src/dlsite_utils/cli/: rename.py
tests/: __init__.py  conftest.py  test_cli.py  test_crypto.py  test_main.py  test_rename.py
tests/cli/: conftest.py  test_rename.py
